20241229 SD-016 出荷伝票外部移転の日付一括更新 权限检查

--- a/sd-s4apps01/zdndatebatchupdate/webapp/view/Display.view.xml
+++ b/sd-s4apps01/zdndatebatchupdate/webapp/view/Display.view.xml
@@ -52,6 +52,7 @@
                             <smartFilterBar:ControlConfiguration
                                 id="id0ControlConfiguration"
                                 key="ShippingPoint"
+                                controlType="dropDownList"
                                 visibleInAdvancedArea="true"
                                 label="{i18n>ShippingPoint}"
                                 mandatory="notMandatory"
@@ -60,6 +61,7 @@
                             <smartFilterBar:ControlConfiguration
                                 id="id1ControlConfiguration"
                                 key="SalesOrganization"
+                                controlType="dropDownList"
                                 visibleInAdvancedArea="true"
                                 label="{i18n>SalesOrganization}"
                                 mandatory="notMandatory"
@@ -68,6 +70,7 @@
                             <smartFilterBar:ControlConfiguration
                                 id="id2ControlConfiguration"
                                 key="Plant"
+                                controlType="dropDownList"
                                 visibleInAdvancedArea="true"
                                 label="{i18n>Plant}"
                                 mandatory="notMandatory"
@@ -76,6 +79,7 @@
                             <smartFilterBar:ControlConfiguration
                                 id="id3ControlConfiguration"
                                 key="SalesOffice"
+                                controlType="dropDownList"
                                 visibleInAdvancedArea="true"
                                 label="{i18n>SalesOffice}"
                                 mandatory="notMandatory"
@@ -123,6 +127,7 @@
                             text="{i18n>DisplayView.downloadBtn}"
                             press="onExport"
                             visible="{local>/onExportvisible}"
+                            enabled="{= ${local>/authorityCheck/button/Export}}"
                         />
                     </OverflowToolbar>
                 </smartTable:customToolbar>
