MM-018 購買情報マスタ一覧 过滤必输调整

--- a/mm-s4apps01/purinfomasterlist/webapp/view/Main.view.xml
+++ b/mm-s4apps01/purinfomasterlist/webapp/view/Main.view.xml
@@ -30,7 +30,7 @@
 							<smartFilterBar:controlConfiguration>
 
 								<smartFilterBar:ControlConfiguration index="1" key="purchasinginforecord" visibleInAdvancedArea="true" label="{i18n>purchasinginforecord}"/>
-								<smartFilterBar:ControlConfiguration index="2" key="plant" controlType="dropDownList" visibleInAdvancedArea="true" label="{i18n>plant}"/>
+								<smartFilterBar:ControlConfiguration index="2" key="plant" controlType="dropDownList" mandatory="mandatory" visibleInAdvancedArea="true" label="{i18n>plant}"/>
 								<smartFilterBar:ControlConfiguration index="3" key="purchasingorganization" visibleInAdvancedArea="true" label="{i18n>purchasingorganization}"/>
 								<smartFilterBar:ControlConfiguration index="4" key="material" visibleInAdvancedArea="true" label="{i18n>material}"/>
 								<smartFilterBar:ControlConfiguration index="5" key="suppliermaterialnumber" visibleInAdvancedArea="true" label="{i18n>suppliermaterialnumber}"/>
