--- a/mm-s4apps01/poposting/webapp/view/Main.view.xml
+++ b/mm-s4apps01/poposting/webapp/view/Main.view.xml
@@ -22,10 +22,10 @@
                         <OverflowToolbar>
                             <Text text="{local>/logInfo}"/>
                             <ToolbarSpacer/>
-                            <Button id="idClearButton" icon="sap-icon://clear-all" type="Transparent" text="{i18n>clearBtn}" press="onClear" visible="{= ${local>/excelSet}.length > 0}"/>
-                            <!-- <Button id="idCheckButton" icon="sap-icon://check-availability"  type="Transparent" text="{i18n>checkBtn}" press="onCheck" visible="{= ${local>/excelSet}.length > 0}"/> -->
-                            <Button id="idExcuteButton" icon="sap-icon://document" type="Transparent" text="{i18n>excuteBtn}" press="onExcute" visible="{= ${local>/excelSet}.length > 0}"/>
-                            <Button id="idExportButton" icon="sap-icon://excel-attachment" type="Transparent" text="{i18n>exportBtn}" press="onExport" visible="{= ${local>/excelSet}.length > 0}"/>
+                            <Button id="idClearButton" icon="sap-icon://clear-all" type="Transparent" text="{i18n>clearBtn}" press="onClear" visible="{= ${local>/excelSet}.length > 0}" enabled="{= ${local>/authorityCheck/button/Clear}}"/>
+                            <!-- <Button id="idCheckButton" icon="sap-icon://check-availability" type="Transparent" text="{i18n>checkBtn}" press="onCheck" visible="{= ${local>/excelSet}.length > 0}"/> -->
+                            <Button id="idExcuteButton" icon="sap-icon://document" type="Transparent" text="{i18n>excuteBtn}" press="onExcute" visible="{= ${local>/excelSet}.length > 0}" enabled="{= ${local>/authorityCheck/button/Excute}}"/>
+                            <Button id="idExportButton" icon="sap-icon://excel-attachment" type="Transparent" text="{i18n>exportBtn}" press="onExport" visible="{= ${local>/excelSet}.length > 0}" enabled="{= ${local>/authorityCheck/button/Export}}"/>
                         </OverflowToolbar>
                     </table:extension>
                     <table:columns>
@@ -57,7 +57,7 @@
                                 <Text text="{local>MaterialDocumentItem}" wrapping="false"/>
                             </table:template>
                         </table:Column>
-                        
+
                         <table:Column width="10rem" label="{i18n>DocumentDate}">
                             <table:template>
                                 <Text text="{ path:'local>DocumentDate',formatter:'.formatter.formatDate' }" wrapping="false"/>
@@ -98,7 +98,7 @@
                                 <Text text="{local>StorageLocation}" wrapping="false"/>
                             </table:template>
                         </table:Column>
-                        
+
                     </table:columns>
                 </table:Table>
             </Panel>
