20250102 購買申請登録とファイル添付 フィールドの追加

--- a/mm-s4apps01/uploadpurchasereq/webapp/view/Upload.view.xml
+++ b/mm-s4apps01/uploadpurchasereq/webapp/view/Upload.view.xml
@@ -529,6 +529,16 @@
                         </t:template>
                     </t:Column>
                     <t:Column
+                        width="8rem"
+                        label="{i18n>OrderID}"
+                    >
+                        <t:template>
+                            <Text
+                                text="{local>OrderID}"
+                            />
+                        </t:template>
+                    </t:Column>
+                    <t:Column
                         id="id24Column"
                         width="8rem"
                         label="{i18n>AssetNo}"
