20250102 出荷伝票一括登録 权限检查

--- a/sd-s4apps01/batchcreationdn/webapp/view/Main.view.xml
+++ b/sd-s4apps01/batchcreationdn/webapp/view/Main.view.xml
@@ -70,6 +70,7 @@
                             id="idDNCreateButton"
                             text="{i18n>MainView.DNCreate}"
                             press="onDNButtonPress"
+                            enabled="{= ${local>/authorityCheck/button/Create}}"
                         />
                     </OverflowToolbar>
                 </smartTable:customToolbar>
