20250102 TWX21検収データ取込み機能 权限检查

--- a/sd-s4apps01/salesacceptdn/webapp/view/Main.view.xml
+++ b/sd-s4apps01/salesacceptdn/webapp/view/Main.view.xml
@@ -103,7 +103,7 @@
                             type="Transparent"
                             text="{i18n>saveBtn}"
                             press="onCreateDN"
-                            enabled="{local>/recordCheckSuccessed}"
+                            enabled="{= ${local>/recordCheckSuccessed} &amp;&amp; ${local>/authorityCheck/button/Process}}"
                         />
                     </OverflowToolbar>
                 </t:extension>
