20240103 FICO-007 有償支給純額計算処理

--- a/fico-s4apps01/paidpaycalculation/webapp/view/Main.view.xml
+++ b/fico-s4apps01/paidpaycalculation/webapp/view/Main.view.xml
@@ -755,7 +755,7 @@
                 <core:CustomData key="p13nData" value='\{"columnKey":"RevenueRate", "leadingProperty":"RevenueRate", "sortProperty":"RevenueRate", "filterProperty": "RevenueRate"}'/>
               </t:customData>
               <t:template>
-                <Text text="{path:'RevenueRate', formatter:'.formatter.formatFloat'}"/>
+                <Text text="{'RevenueRate'}"/>
               </t:template>
             </t:Column>					
 		    </t:Table>
