MM-004 購買単価差異レポート 追加过滤条件

--- a/mm-s4apps01/zpurchasepricevariance/webapp/view/Main.view.xml
+++ b/mm-s4apps01/zpurchasepricevariance/webapp/view/Main.view.xml
@@ -21,6 +21,7 @@
                             <smartFilterBar:controlConfiguration>
                                 <smartFilterBar:ControlConfiguration index='10' key="Plant" visibleInAdvancedArea="true" controlType="dropDownList" label="{i18n>Plant}"/>
                                 <smartFilterBar:ControlConfiguration index='20' key="PurchaseOrder" visibleInAdvancedArea="true" label="{i18n>PurchaseOrder}"/>
+                                <smartFilterBar:ControlConfiguration index='25' key="PurchaseOrderStr" visibleInAdvancedArea="true" label="{i18n>PurchaseOrderStr}"/>
                                 <smartFilterBar:ControlConfiguration index='30' key="Supplier" visibleInAdvancedArea="true" label="{i18n>Supplier}"/>
                                 <smartFilterBar:ControlConfiguration index='40' key="PurchasingGroup" visibleInAdvancedArea="true" label="{i18n>PurchasingGroup}"/>
                                 <smartFilterBar:ControlConfiguration index='50' key="Material" visibleInAdvancedArea="true" label="{i18n>Material}"/>
