PP-032 在庫/所要一覧レポート 过滤器工厂格式不显示下拉框

--- a/pp-s4apps01/zinventoryrequirement/webapp/view/Main.view.xml
+++ b/pp-s4apps01/zinventoryrequirement/webapp/view/Main.view.xml
@@ -19,7 +19,7 @@
                     <FlexBox fitContainer="true">
                         <smartFilterBar:SmartFilterBar id="idSmartFilterBar" entitySet="ZC_InventoryRequirement" useToolbar="false" smartVariant="__SVM01" persistencyKey="InventoryRequirementSFB" search="onSearch">
                             <smartFilterBar:controlConfiguration>
-                                <smartFilterBar:ControlConfiguration index='10' key="Plant" mandatory="mandatory" controlType="dropDownList" visibleInAdvancedArea="true" label="{i18n>Plant}"/>
+                                <smartFilterBar:ControlConfiguration index='10' key="Plant" mandatory="mandatory" visibleInAdvancedArea="true" label="{i18n>Plant}"/>
                                 <smartFilterBar:ControlConfiguration index='20' key="MRPArea" visibleInAdvancedArea="true" label="{i18n>MRPArea}"/>
                                 <smartFilterBar:ControlConfiguration index='30' key="MRPController" mandatory="mandatory" visibleInAdvancedArea="true" label="{i18n>MRPController}"/>
                                 <smartFilterBar:ControlConfiguration index='40' key="PurchasingGroup" visibleInAdvancedArea="true" label="{i18n>PurchasingGroup}"/>
